syntax = "proto3";

import "Protos/google/api/annotations.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "Protos/exception.proto";
option csharp_namespace = "PrdGrpcService";

package category;

service CategoryOpr {
	rpc CreateCategory (CategoryCreateRequest) returns (CategoryCreateResponse) {
		option (google.api.http) = {
            post: "/Category/CreateCategory"
            body: "*"
		};
	};
	rpc GetFilteredCategories (CategoryListRequest) returns (CategoryListResponse) {
		option (google.api.http) = {
            post: "/Category/GetFilteredCategories"
            body: "*"
		};
	}
}

message CategoryCreateRequest {
	string Name = 1;
	string ParentCategoryId = 2;
}
message CategoryCreateResponse {
    optional Category Data = 1;
    bool IsSuccess = 2;
    google.protobuf.Timestamp ResponseTime = 3;
    Exception Exception = 4;
}
message CategoryListRequest {
	string Name = 1;
}
message CategoryListResponse {
    repeated Category Data = 1;
    bool IsSuccess = 2;
    google.protobuf.Timestamp ResponseTime = 3;
    Exception Exception = 4;
}
message Category {
    string Guid = 1;
    string Name = 2;
    optional string ParentCategoryGuid = 3;
    bool Status = 4;
    bool IsDeleted = 5;
}